add population for cities

--- a/notebooks/populations.ipynb
+++ b/notebooks/populations.ipynb
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,9 +311,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 234,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rows total:\t\t 3225\n",
+      "rows with pop before:\t 1918\n",
+      "rows with pop after:\t 1979\n"
+     ]
+    }
+   ],
    "source": [
     "dataset = load_worldcities(WORLDCITIES_PATH)\n",
     "regions = merge_dataset(regions, dataset)"
@@ -321,9 +331,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 235,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rows total:\t\t 3225\n",
+      "rows with pop before:\t 1979\n",
+      "rows with pop after:\t 2240\n"
+     ]
+    }
+   ],
    "source": [
     "dataset = load_cities15000(CITIES_15k_PATH)\n",
     "regions = merge_dataset(regions, dataset)"
@@ -331,12 +351,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 236,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rows total:\t\t 3225\n",
+      "rows with pop before:\t 2240\n",
+      "rows with pop after:\t 2240\n"
+     ]
+    }
+   ],
    "source": [
     "dataset = load_india500(INDIA500_PATH)\n",
     "regions = merge_dataset(regions, dataset)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Save results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "update_regions(REGIONS_PATH, regions)"
    ]
   },
   {
