add UNSD city data

--- a/notebooks/populations.ipynb
+++ b/notebooks/populations.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,6 +26,8 @@
     "STATES_INCL_CHINA_PATH = DATA_FOLDER + \"/population_incl_china_states.csv\"\n",
     "US_STATE_PATH = DATA_FOLDER + \"/us_state_populations.csv\"\n",
     "WORLD_PATH = DATA_FOLDER + \"/WorldPopulation.csv\"\n",
+    "UNSD_FM_PATH = DATA_FOLDER + \"/unsd-citypopulation-year-fm.csv\"\n",
+    "UNSD_BOTH_PATH = DATA_FOLDER + \"/unsd-citypopulation-year-both.csv\"\n",
     "\n",
     "\n",
     "def format_df(data, do_print=False):\n",
@@ -129,6 +131,23 @@
     "    \n",
     "    return data\n",
     "\n",
+    "def load_unsd(filepath):\n",
+    "    data = pd.read_csv(filepath).iloc[:-165]\n",
+    "    \n",
+    "    from unidecode import unidecode\n",
+    "    data[\"name\"] = data[\"City\"].apply(lambda x: unidecode(x).lower())\n",
+    "    \n",
+    "    data[\"population\"] = data[\"Value\"]\n",
+    "    \n",
+    "    data = data.sort_values(by=[\"name\", \"Year\"])\n",
+    "    \n",
+    "    data = data.drop_duplicates(keep='last', subset=[\"name\"])\n",
+    "    \n",
+    "#     data = format_df(data, do_print=True)\n",
+    "    data = format_df(data)\n",
+    "    \n",
+    "    return data\n",
+    "\n",
     "# load Regions dataset\n",
     "\n",
     "# load all population datasets\n",
@@ -139,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +212,7 @@
     "    df = df.dropna()\n",
     "    \n",
     "    for reg, row in df.iterrows():\n",
-    "        regions.regions[reg].pop = int(row['population'])\n",
+    "        regions.regions[reg].pop = float(row['population'])\n",
     "        \n",
     "    with open(filepath, 'w') as f:\n",
     "        regions.write_csv(f)"
@@ -370,6 +389,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 276,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rows total:\t\t 3225\n",
+      "rows with pop before:\t 2240\n",
+      "rows with pop after:\t 2279\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset = load_unsd(UNSD_BOTH_PATH)\n",
+    "regions = merge_dataset(regions, dataset)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -378,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 279,
    "metadata": {
     "scrolled": true
    },
