add country populations

--- a/notebooks/populations.ipynb
+++ b/notebooks/populations.ipynb
@@ -143,7 +143,6 @@
     "    \n",
     "    data = data.drop_duplicates(keep='last', subset=[\"name\"])\n",
     "    \n",
-    "#     data = format_df(data, do_print=True)\n",
     "    data = format_df(data)\n",
     "    \n",
     "    return data\n",
@@ -418,6 +417,80 @@
   {
    "cell_type": "code",
    "execution_count": 279,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "update_regions(REGIONS_PATH, regions)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Update country populations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 296,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regions = load_regions_df(REGIONS_PATH, kind=\"country\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 297,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rows total:\t\t 230\n",
+      "rows with pop before:\t 16\n",
+      "rows with pop after:\t 17\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset = load_states_incl_china(STATES_INCL_CHINA_PATH)\n",
+    "regions = merge_dataset(regions, dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 298,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rows total:\t\t 230\n",
+      "rows with pop before:\t 17\n",
+      "rows with pop after:\t 190\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset = load_world(WORLD_PATH)\n",
+    "regions = merge_dataset(regions, dataset)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Save results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 299,
    "metadata": {
     "scrolled": true
    },
