fix nans and nulls

--- a/notebooks/containments/containment-to-json.ipynb
+++ b/notebooks/containments/containment-to-json.ipynb
@@ -9,17 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,18 +60,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "final_d = {}\n",
     "for iso in df.index.unique():\n",
-    "    final_d[iso] = [rec.to_dict() for _, rec in df.loc[[iso]].iterrows()]"
+    "    final_d[iso] = [rec.replace({np.nan: None}).to_dict() for _, rec in df.loc[[iso]].iterrows()]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +119,7 @@
        "  'source': 'https://www.theguardian.com/world/video/2020/mar/10/st-peters-square-before-and-after-italys-nationwide-lockdown-video'}]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -144,8 +145,8 @@
      "output_type": "stream",
      "text": [
       "Copying file://data-containments.json [Content-Type=application/json]...\n",
-      "- [1 files][567.0 KiB/567.0 KiB]                                                \n",
-      "Operation completed over 1 objects/567.0 KiB.                                    \n"
+      "- [1 files][567.1 KiB/567.1 KiB]                                                \n",
+      "Operation completed over 1 objects/567.1 KiB.                                    \n"
      ]
     }
    ],
